RESOLVED FIXED 119742
REGRESSION(FTL): Fix register usage in mips implementation of ctiVMHandleException
https://bugs.webkit.org/show_bug.cgi?id=119742
Summary REGRESSION(FTL): Fix register usage in mips implementation of ctiVMHandleExce...
Balazs Kilvady
Reported 2013-08-13 05:26:49 PDT
+++ This bug was initially created as a clone of Bug #119447 +++ Crashes are observed during javascriptcore tests around exception catching (lint_op_catch).
Attachments
proposed patch. (1.27 KB, patch)
2013-08-13 05:39 PDT, Balazs Kilvady
no flags
rebased patch. (1.26 KB, patch)
2013-08-16 03:10 PDT, Balazs Kilvady
no flags
Balazs Kilvady
Comment 1 2013-08-13 05:39:47 PDT
Created attachment 208621 [details] proposed patch. Applying this patch all mozilla test are passed and SunSpider can runs also on MIPS boards.
Balazs Kilvady
Comment 2 2013-08-16 03:10:51 PDT
Created attachment 208900 [details] rebased patch. Rebased on r154168.
WebKit Commit Bot
Comment 3 2013-08-16 03:15:44 PDT
Comment on attachment 208900 [details] rebased patch. Rejecting attachment 208900 [details] from review queue. jbrianceau@nds.com does not have reviewer permissions according to http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/contributors.json. - If you do not have reviewer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have reviewer rights please correct the error in Tools/Scripts/webkitpy/common/config/contributors.json by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your reviewer rights.
WebKit Commit Bot
Comment 4 2013-08-16 03:16:21 PDT
Comment on attachment 208900 [details] rebased patch. Rejecting attachment 208900 [details] from commit-queue. jbrianceau@nds.com does not have committer permissions according to http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/contributors.json. - If you do not have committer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/contributors.json by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
Julien Brianceau
Comment 5 2013-08-16 03:17:05 PDT
Comment on attachment 208900 [details] rebased patch. Sorry about that, wrong manipulation :(
WebKit Commit Bot
Comment 6 2013-08-16 03:59:47 PDT
The commit-queue encountered the following flaky tests while processing attachment 208900 [details]: http/tests/navigation/ping-cross-origin-from-https.html bug 51314 (authors: japhet@chromium.org and rniwa@webkit.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 7 2013-08-16 04:01:33 PDT
Comment on attachment 208900 [details] rebased patch. Clearing flags on attachment: 208900 Committed r154173: <http://trac.webkit.org/changeset/154173>
WebKit Commit Bot
Comment 8 2013-08-16 04:01:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.