<https://webkit.org/b/119742> REGRESSION(FTL): Fix register usage in mips implementation of ctiVMHandleException

Patch by Balazs Kilvady <kilvadyb@homejinni.com> on 2013-08-16
Reviewed by Allan Sandfeld Jensen.

ctiVMHandleException must jump/return using register ra (r31).

* jit/JITStubsMIPS.h:

Canonical link: https://commits.webkit.org/137850@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154173 268f45cc-cd09-0410-ab3c-d52691b4dbfc